@@ -1,3 +1,4 @@
+* [Bug 1391] avoid invoking autogen twice for .c and .h files.
 * [Bug 1397] shmget() refclock_shm failing because of file mode.
 (4.2.5p249-RC) 2009/11/28 Released by Harlan Stenn <stenn@ntp.org>
 * [Bug 1400] An empty KOD DB file causes sntp to coredump.
